--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>山田太郎のポートフォリオサイト</title>
   <body>
     <h1>山田太郎</h1>
-    <p>UI/UXデザイナー見習いです</p>
+    <p>UI/UXデザイナー見習いです!ドットインストールで勉強中です！</p>
 
   </body>
 </head>
